WIP migration to spring boot 3